# musicbucket-bot

./: .env.dist  .gitignore  Dockerfile  Pipfile  README.md  README.rst  bot.py  db.py  deploy.sh  docker-compose.yml  main.py  migration.py  pyproject.toml  requirements.txt  responser.py  spotify.py
.github/workflows/: codeql.yml
app/: db.py  logger.py  models.py  music_bucket_bot.py  musicbucket_bot.py  responser.py
app/db/: db.py
app/music/: deezer.py  lastfm.py  music.py  spotify.py  streaming_service.py
app/util/: utils.py
src/: link_migration.py  main.py  release_date_album_data_migration.py
src/bot/: __init__.py  buttons.py  commands.py  db.py  emojis.py  logger.py  main.py  messages.py  mixins.py  models.py  music_bucket_bot.py  musicbucket_bot.py  reply.py  responser.py  search.py  utils.py
src/bot/api_client/: api_client.py  lastfm_api_client.py  spotify_api_client.py  telegram_api_client.py
src/bot/music/: lastfm.py  music.py  musicbrainz.py  spotify.py
tests/: test_db.py  test_logger.py  test_music_bucket_bot.py
tests/music/: test_lastfm.py  test_spotify.py
