[tool.poetry]
name = "musicbucket-bot"
version = "0.1.0"
description = ""
authors = ["Pau Riera <pau.riera.forteza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "==0.20.*"
python-telegram-bot = "==13.12"
requests = "==2.28.0"
emoji = "==1.7.0"
sentry-sdk = "==1.5.12"

[tool.poetry.dev-dependencies]
pytest = "*"
ipdb = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
